    pcre_compile().

21. Change 18 of release 8.01 broke the use of named subpatterns for recursive
    back references. Groups containing recursive back references were forced to
    be atomic by that change, but in the case of named groups, the amount of
    memory required was incorrectly computed, leading to "Failed: internal
    error: code overflow". This has been fixed.


Version 8.10 25-Jun-2010
------------------------

1.  Added support for (*MARK:ARG) and for ARG additions to PRUNE, SKIP, and
    THEN.

2.  (*ACCEPT) was not working when inside an atomic group.

3.  Inside a character class, \B is treated as a literal by default, but
    faulted if PCRE_EXTRA is set. This mimics Perl's behaviour (the -w option
    causes the error). The code is unchanged, but I tidied the documentation.

4.  Inside a character class, PCRE always treated \R and \X as literals,
    whereas Perl faults them if its -w option is set. I have changed PCRE so
    that it faults them when PCRE_EXTRA is set.

5.  Added support for \N, which always matches any character other than
    newline. (It is the same as "." when PCRE_DOTALL is not set.)

6.  When compiling pcregrep with newer versions of gcc which may have
    FORTIFY_SOURCE set, several warnings "ignoring return value of 'fwrite',
    declared with attribute warn_unused_result" were given. Just casting the
    result to (void) does not stop the warnings; a more elaborate fudge is
    needed. I've used a macro to implement this.

7.  Minor change to pcretest.c to avoid a compiler warning.

8.  Added four artifical Unicode properties to help with an option to make
    \s etc use properties (see next item). The new properties are: Xan
    (alphanumeric), Xsp (Perl space), Xps (POSIX space), and Xwd (word).

9.  Added PCRE_UCP to make \b, \d, \s, \w, and certain POSIX character classes
    use Unicode properties. (*UCP) at the start of a pattern can be used to set